force-app/main/default/objects/AuditLead__c/AuditLead__c.object-meta.xml
<CustomObject>
    <label>Audit Lead</label>
    <nameField>
        <label>AuditLead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AuditLeads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>