force-app/main/default/objects/AuditLead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Concerned_User__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NewValue__c</columns>
    <columns>OldValue__c</columns>
    <columns>ConcernedObject__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>